Bug 182107. Don't let negative z-index views mess up document ordering. r=kmcclusk,sr=bzbarsky,a=asa